# windows-rs-xaml-island-example

./: Cargo.toml  app.manifest  build.rs
bindings/: Cargo.toml  build.rs
src/: main.rs
