[package]
name = "rust-xaml"
version = "0.1.0"
authors = ["kai <thiskaiguy@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.26"

[dependencies.windows]
version = "0.30"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WinRT_Xaml",
    "Foundation_Collections",
    "UI_Xaml_Hosting",
    "UI_Xaml_Controls",
    "UI_Xaml_Controls_Primitives",
]

[build-dependencies]
embed-resource = "1"
